// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spinner component test Has right states 1`] = `
<div>
  <svg
    class="Spinner Spinner__md"
    color="currentColor"
    preserveAspectRatio="xMidYMid"
    viewBox="0 0 100 100"
  >
    <circle
      cx="50"
      cy="50"
      fill="none"
      r="35"
      stroke="currentColor"
      stroke-dasharray="164.93361431346415 56.97787143782138"
      stroke-width="6"
    >
      <animatetransform
        attributeName="transform"
        dur="1s"
        keyTimes="0;1"
        repeatCount="indefinite"
        type="rotate"
        values="0 50 50;360 50 50"
      />
    </circle>
  </svg>
</div>
`;

exports[`Spinner component test Has right states 2`] = `
<div>
  <svg
    class="Spinner Spinner__xl"
    color="currentColor"
    preserveAspectRatio="xMidYMid"
    viewBox="0 0 100 100"
  >
    <circle
      cx="50"
      cy="50"
      fill="none"
      r="35"
      stroke="currentColor"
      stroke-dasharray="164.93361431346415 56.97787143782138"
      stroke-width="8"
    >
      <animatetransform
        attributeName="transform"
        dur="1s"
        keyTimes="0;1"
        repeatCount="indefinite"
        type="rotate"
        values="0 50 50;360 50 50"
      />
    </circle>
  </svg>
</div>
`;
